//
// Created by agmui on 9/7/23.
//

#ifndef GENETIC_ALGORITHM_DEMO_AGENT_H
#define GENETIC_ALGORITHM_DEMO_AGENT_H

#include "../Genomes/Genome.h"

namespace GenAlg {

    class Agent {
        Genome genome;
    };

} // GenAlg

#endif //GENETIC_ALGORITHM_DEMO_AGENT_H
