//
// Created by agmui on 9/7/23.
//

#ifndef GENETIC_ALGORITHM_DEMO_BINARYGENOME_H
#define GENETIC_ALGORITHM_DEMO_BINARYGENOME_H

#include "Genome.h"

namespace GenAlg {

    class BinaryGenome: public Genome{
        int genome[8];

    };

} // GenAlg

#endif //GENETIC_ALGORITHM_DEMO_BINARYGENOME_H
