//
// Created by agmui on 9/7/23.
//

#ifndef GENETIC_ALGORITHM_DEMO_GENOME_H
#define GENETIC_ALGORITHM_DEMO_GENOME_H

namespace GenAlg {

    class Genome {
    public:
        void* genome;

    };

} // GenAlg

#endif //GENETIC_ALGORITHM_DEMO_GENOME_H
