//
// Created by agmui on 9/7/23.
//

#ifndef GENETIC_ALGORITHM_DEMO_LOGGER_H
#define GENETIC_ALGORITHM_DEMO_LOGGER_H

namespace GenAlg {

    class Logger {

    };

} // GenAlg

#endif //GENETIC_ALGORITHM_DEMO_LOGGER_H
