@startuml
!theme reddress-darkred

class Simulation{
    - populationSize: int
    - population: Vector<Agents>
    - time: float

    - mutationParams[]: float
    - mutationFuncs[]: Mutation
    - fitness: Fitness
    - selectionFuncs[]: Selection
    - reproductionFuncs[]: Reproduction
    - loggers[]: Loggers

    + initPopulation(): void
    + run(): void

}
Simulation <-- Agent
Simulation <-- Mutation
Simulation <-- Fitness
Simulation <-- Selection
Simulation <-- Reproduction
Simulation <-- Logger


interface Agent{
    genome: Genome
}
class BinaryBois{
    genome: BinaryGenome
}
Agent <-- Genome
Agent <|-- BinaryBois

interface Genome{
    genome: virtual
}

class TreeGenome{
    genome: Node
}
class BinaryGenome{
    genome: int[]
}
class TravlingSailsmenGenome{}
Genome <|-- TreeGenome
Genome <|-- BinaryGenome
Genome <|-- TravlingSailsmenGenome

interface Mutation{
    mutatePopulation(population: Vector<Agent>): void
}
class Recombination{
    Recombination(params: float)
    mutatePopulation(population: Vector<Agent>)
    mutateAgents(agent1: Agent, agent2: Agent)
}
class Inversion{
    Inversion(params: float)
    mutatePopulation(population: Vector<Agent>)
    mutateAgent(agent: Agent)
}
class Insertion{
    mutate(population: Vector<Agent>)
    mutateAgents(agent1: Agent, agent2: Agent)
}
Mutation <|-- Recombination
Mutation <|-- Inversion
Mutation <|-- Insertion

' allows for changing fitness function over time
interface Fitness{

    + eval(population: Vector<Agent>)
    - evalGenome(g: Genome): float
    - sort(population: Vector<Agent>)
}
class Combination{
    'uses weighted sum of multiple fitness funcs demo?'
}
class MostOnes{
    - fitnessValues: sortedMap

    + eval(population: Vector<BinaryBois>)
    - evalGenene(g: BinaryGenome): float
    - sort(population: Vector<BinaryBois>)
}
class ValueOfString{
    - max
    - min
    - avg
    - fitnessValues: sortedMap

    + eval(population: Vector<BinaryBois>)
    - evalGenome(g: BinaryGenome): float
    - sort(population: Vector<BinaryBois>)

    'just to demo visitor design patern: https://refactoring.guru/design-patterns/visitor'
    + accept(v: Visitor)
}
Fitness <|-- MostOnes
Fitness <|-- Combination
Fitness <|-- ValueOfString


interface Selection{
    - fitness: Fitness

    '+ Selection(fitness: Fitness)'
    + choose(population: Vector<Agent>): void
}
class Proportionate{
    + choose(population: Vector<Agent>)
}
class Roulette{
    + choose(population: Vector<Agent>)
}
class Ranked{
    + choose(population: Vector<Agent>)
}
class Truncate{
    + choose(population: Vector<Agent>)
}
class Tournament{
    + choose(population: Vector<Agent>)
}
class GenReplacement{
    + choose(population: Vector<Agent>)
}
class Elitism{
    + choose(population: Vector<Agent>)
}
Selection <|-- Proportionate
Selection <|-- Roulette
Selection <|-- Ranked
Selection <|-- Truncate
Selection <|-- Tournament
Selection <|-- GenReplacement
Selection <|-- Elitism


interface Reproduction{
    repopulate(population): void

}

interface Visitor{
    visit(fitnessFunc: ValueOfString)
}
ValueOfString <-- Visitor
interface Logger{
}
class CSVLogger{}
Logger <|-- CSVLogger
Visitor <|-down- CSVLogger

@enduml
